Misc changes due to using some pieces as external libraries; some updates and fixes