@@ -8,25 +8,41 @@
     <packaging>pom</packaging>
     <name>Imagine - NB App Parent</name>
     <properties>
-        <netbeans.version>RELEASE82</netbeans.version>
+        <netbeans.version>RELEASE112</netbeans.version>
         <brandingToken>imagine</brandingToken>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <nbcluster>imagine</nbcluster>
     </properties>
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
+                    <groupId>org.apache.netbeans.utilities</groupId>
+                    <artifactId>nbm-maven-plugin</artifactId>
+                    <version>4.3</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <branding.token>${nbcluster}</branding.token>
+                        <brandingToken>${nbcluster}</brandingToken>
+                        <cluster>${nbcluster}</cluster>
+<!--                        <licenseName>Apache-2.0</licenseName>
+                        <licenseFile>${project.parent.relativePath}/../LICENSE</licenseFile>-->
+                        <requiresRestart>false</requiresRestart>
+                        <!--<finalName>${project.artifactId}</finalName>-->
+                        <moduleType>autoload</moduleType>
+                    </configuration>
+
+<!--                    <groupId>org.codehaus.mojo</groupId>
                     <artifactId>nbm-maven-plugin</artifactId>
                     <version>4.1</version>
                     <extensions>true</extensions>
                     <configuration>
-<!--                        <cluster>imagine</cluster> -->
+                        <cluster>imagine</cluster>
                         <useOSGiDependencies>false</useOSGiDependencies>
                         <brandingToken>${brandingToken}</brandingToken>
                         <moduleType>autoload</moduleType>
                         <cluster>${brandingToken}</cluster>
-                    </configuration>
+                    </configuration>-->
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -58,7 +74,29 @@
                         <quiet>true</quiet>
                         <doclint>none</doclint>
                     </configuration>
-                </plugin>    
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <!--<version>2.22.1</version>-->
+                    <version>3.0.0-M4</version>
+                    <configuration>
+                        <parallel>all</parallel>
+                        <parallelMavenExecution>true</parallelMavenExecution>
+                        <perCoreThreadCount>1</perCoreThreadCount>
+                        <threadCount>1</threadCount>
+                        <forkCount>8</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <trimStackTrace>false</trimStackTrace>
+                        <argline>--illegal-access=permit</argline>
+                        <systemPropertyVariables>
+                            <java.awt.headless>${headlessTests}</java.awt.headless>
+                            <unit.test>true</unit.test>
+                            <forkNumber>${surefire.forkNumber}</forkNumber>
+                            <netbeans.moduleitem.dontverifyclassloader>true</netbeans.moduleitem.dontverifyclassloader>
+                        </systemPropertyVariables>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -87,6 +125,7 @@
         <module>effectsapi</module>
         <module>toolsapi</module>
         <!--<module>customizers2</module>-->
+        <module>ui-common</module>
     </modules>
     <repositories>
         <repository>
@@ -187,6 +226,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>paintui</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>splines</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -208,6 +252,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>toolsapi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>ui-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
